Model Results/Grok/13e47133/iter_1_feedback.txt
VALIDATOR ERROR (exit 1):

STDOUT:


STDERR:
Traceback (most recent call last):
  File "/home/runner/work/ARC-AGI2/ARC-AGI2/run_feedback.py", line 305, in <module>
    main()
  File "/home/runner/work/ARC-AGI2/ARC-AGI2/run_feedback.py", line 194, in main
    solve = importlib.import_module(solution_module).solve
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.11.15/x64/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/work/ARC-AGI2/ARC-AGI2/solution.py", line 1
    if 0 not in layer_color:                 layer_color[0] = bg_color             if not layer_color:                 continue             max_k = max(layer_color.keys())             period = max_k + 1             # assign to output             for r, c in region_cells:                 k = depth.get((r, c), 0)                 col_idx = k % period                 output[r][c] = layer_color[col_idx]     return output
                                                                                                                                                                                                                                                                                                                                                                                                                                   ^
IndentationError: expected an indented block after function definition on line 1
